# seat-surface-aoi

./: .clangd  .gitignore  AGENTS.md  README.md  pyproject.toml  seat-defect-inspection-architecture.md
cpp_controller/: CMakeLists.txt  README.md
cpp_controller/config/: station_runtime.capture_only.conf  station_runtime.capture_only.single_camera.conf  station_runtime.example.conf  station_runtime.lab_manual.conf  station_runtime.lab_manual.example.conf  station_runtime.production.conf  station_runtime.production.example.conf  station_runtime.replay_capture.conf  station_runtime.robot_flyshot.example.conf  station_runtime.robot_flyshot.production.example.conf  station_runtime.test.conf
cpp_controller/docs/superpowers/plans/: 2026-06-09-abstract-interfaces.md
cpp_controller/include/camera/: camera_device.hpp  camera_worker.hpp  hikrobot_mvs_camera.hpp  icamera.hpp  replay_capture.hpp
cpp_controller/include/common/: error_code.hpp  inspection_types.hpp  png_reader.hpp  string_utils.hpp  time_utils.hpp
cpp_controller/include/control/: distance_sensor.hpp  distance_trigger_signal_client.hpp  external_trigger.hpp  fl_acdh_light_controller.hpp  frame_assembler.hpp  hardware_backend.hpp  hardware_factory.hpp  ilight_controller.hpp  image_writer.hpp  iplc_client.hpp  irobot_client.hpp  isignal_client.hpp  jklrd_presence_gate.hpp  light_controller.hpp  plc_client.hpp  production_event_log.hpp  robot_client.hpp  signal_client.hpp  station_controller.hpp  station_health.hpp  station_runtime_config.hpp  tcp_signal_client.hpp  trigger_scheduler.hpp
cpp_controller/include/ipc/: crc32.hpp  frame_ring_buffer.hpp  result_ring_buffer.hpp  shared_memory.hpp  shm_protocol.hpp
cpp_controller/src/: main.cpp
cpp_controller/src/camera/: camera_device.cpp  camera_worker.cpp  hikrobot_mvs_camera.cpp  replay_capture.cpp
cpp_controller/src/common/: png_reader.cpp
cpp_controller/src/control/: distance_sensor.cpp  distance_trigger_signal_client.cpp  fl_acdh_light_controller.cpp  frame_assembler.cpp  hardware_backend.cpp  image_writer.cpp  jklrd_presence_gate.cpp  light_controller.cpp  plc_client.cpp  production_event_log.cpp  robot_client.cpp  signal_client.cpp  station_controller.cpp  station_health.cpp  station_runtime_config.cpp  tcp_signal_client.cpp  trigger_scheduler.cpp
cpp_controller/src/ipc/: crc32.cpp  frame_ring_buffer.cpp  result_ring_buffer.cpp  shared_memory.cpp  shared_memory_posix.cpp  shared_memory_win32.cpp
cpp_controller/tools/: ipc_safety_checks.cpp  protocol_layout.cpp
display_app/: README.md  __init__.py  main.py
display_app/infrastructure/: __init__.py  image_provider.py
display_app/qml/: CameraGrid.qml  CameraTile.qml  LogsPage.qml  MainScreen.qml  NGOverlay.qml  ReviewPage.qml  StatsPage.qml  StatusBar.qml  main.qml
display_app/services/: __init__.py  display_bridge.py  image_loader.py  manual_trigger_client.py  operator_journal.py
display_app/tests/: test_display_app_bridge.py  test_manual_trigger_client.py
display_app/viewmodels/: __init__.py  main_viewmodel.py
docs/: README.md  calibration_and_roi.md  cpp_controller_current_logic.md  cpp_controller_hardware_manual.md  cpp_controller_operations.md  cpp_controller_production_config_quickstart.md  cpp_controller_production_sop.md  deployment.md  deployment_readiness_report.md  hardware_integration.md  model_backend.md  project_function_call_map.md  python_detector_module.md  python_detector_operations.md  python_detector_performance_report.md  recipe_design.md  seat-defect-inspection-architecture.md  shm_protocol.md  test_machine_integration.md  trace_and_replay.md  v4_architecture_alignment.md
model/: README.md
model/patchcore/: embeddings.jsonl  patchcore_training_summary.json  pca_embeddings.jsonl  seat_patchcore.faiss  seat_patchcore_bank.json  seat_pca.json
python_detector/: README.md  __init__.py  algorithm.py  detector_main.py  display_channel.py  image_codec.py  paths.py
python_detector/config/: __init__.py  calibration_manager.py  default_recipe.yaml  production_model.example.yaml  production_recipe.yaml  production_robot_flyshot_recipe.yaml  recipe_schema.py  robot_flyshot_recipe.yaml  schema_types.py  schema_validators.py
python_detector/ipc/: __init__.py  data_types.py  shared_memory_map.py  shm_client.py  shm_protocol.py
python_detector/models/: __init__.py  asset_errors.py  embedding.py  inference_engine.py  onnx_runtime.py  patchcore.py  patchcore_model.py  pca.py  spatial_utils.py  yolo_decode.py
python_detector/pipeline/: __init__.py  defect_filter.py  ecc_registration.py  feature_builder.py  fusion_engine.py  pipeline.py  preprocessor.py  quality_gate.py  reflectance_cube.py  roi_locator.py  rule_engine.py
python_detector/tests/: test_algorithm_api.py  test_architecture_readiness.py  test_calibration_roi.py  test_deployment_preflight.py  test_detector_main_config.py  test_display_channel.py  test_ecc_registration.py  test_fusion_engine.py  test_model_assets.py  test_model_backend.py  test_protocol_layout.py  test_quality_and_features.py  test_recipe_schema.py  test_result_serialization.py  test_roi_locator_mask.py  test_rule_engine_thresholds.py  test_run_cpp_soak_tool.py  test_run_simulated_ipc_tool.py  (+14 more)
tools/: benchmark_pipeline.py  build_patchcore_memory_bank.py  job_fixture.py  package_python_offline_deps.py  package_release.py  package_release.sh  pipeline_report.py  replay_dataset.py  run_cpp_soak.py  run_cpp_soak.sh  run_simulated_ipc.py  run_simulated_ipc.sh  validate_architecture_readiness.py  validate_deployment_preflight.py  validate_model_assets.py  validate_protocol.py
training_tools/: __init__.py  benchmark_pipeline.py  build_faiss_index.py  build_patchcore_memory_bank.py  collect_capture_dataset.py  collect_shm_dataset.py  collect_trace_dataset.py  compute_pca.py  dataset_manifest.py  evaluate_pipeline.py  export_wideresnet_embedding.py  extract_embeddings.py  job_fixture.py  pipeline_report.py  replay_dataset.py  simulate_capture_detection.py  train_patchcore_assets.py  train_roi_yolo.py  train_supervised_yolo.py  training_errors.py
(+27 files in other folders)
