[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seat-surface-aoi-python-detector"
version = "0.1.0"
description = "汽车座椅表面 AOI Python 检测算法模块"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
display = [
  "numpy>=1.24",
  "PySide6>=6.6",
]
onnx = [
  "numpy>=1.24",
  "onnxruntime>=1.16",
]
faiss = [
  "faiss-cpu>=1.8",
  "numpy>=1.24",
]

[dependency-groups]
test = [
  "numpy>=1.24",
  "PySide6>=6.6",
  "pytest>=8.0",
]
training = [
  "numpy>=1.24",
  "onnxruntime>=1.16,<1.20",
  "ultralytics>=8.0",
  "torch>=2.0",
  "torchvision>=0.15",
  "faiss-cpu>=1.8,<1.9",
  "onnx>=1.14",
]
dev = [
  "numpy>=1.24",
  "PySide6>=6.6",
  "pytest>=8.0",
  "ruff>=0.8.0",
]

[project.scripts]
seat-aoi-detector = "python_detector.detector_main:main"
seat-aoi-display = "display_app.main:main"

[tool.setuptools.packages.find]
include = ["python_detector*", "training_tools*", "display_app*"]
exclude = ["cpp_controller*", "docs*", "tools*"]

[tool.setuptools.package-data]
python_detector = ["py.typed", "config/**/*.yaml"]
display_app = ["qml/**/*.qml", "resources/styles/*"]

[tool.pytest.ini_options]
testpaths = ["python_detector/tests", "display_app/tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
  "cpp_controller/build",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
